# apps

./: .cspell.json  .dockerignore  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.cjs  .lintstagedrc.js  .npmrc  .prettierignore  .syncpackrc  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  Dockerfile.avatax.dev  Dockerfile.dev  LICENSE  PRIVATE_APPS.md  README.md  codecov.yml  cspell.config.js  cspell.json  docker-compose.db.yml  docker-compose.search.prod.yml  docker-compose.yml  knip.config.ts  knip.json  lint-staged.config.js  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  socket.yml  syncpack.config.js  turbo.json  turbo.jsonc
.changeset/: README.md  afraid-ducks-heal.md  (+869 more)
apps/monitoring/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/monitoring/backend/monitoring/: __main__.py  api.py  app.py  deps.py  logs.py  payload.py  schema.graphql  schema.py  settings.py  utils.py
apps/monitoring/backend/monitoring/apl/: __init__.py  common.py  wrapper.py
apps/monitoring/backend/monitoring/apl/backends/: __init__.py  base.py  file.py  mem.py  rest.py
apps/monitoring/backend/monitoring/apl/tests/: conftest.py  test_apl_client.py
apps/monitoring/backend/monitoring/integrations/: datadog.py  logs.py
apps/monitoring/backend/monitoring/saleor/: __init__.py  client.py  common.py  crypto.py  graphql.py  manager.py  metadata.py  utils.py
apps/monitoring/backend/monitoring/saleor/tests/: test_metadata.py
apps/monitoring/backend/monitoring/tests/: conftest.py  test_app.py  test_utils.py
(+4992 files in other folders)
